[gd_scene load_steps=10 format=3 uid="uid://c8rvyc3urgxhc"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_8rxgg"]
[ext_resource type="ArrayMesh" uid="uid://c846vps6rkcio" path="res://assets/enemy/demon.obj" id="2_3ylb2"]
[ext_resource type="AudioStream" uid="uid://c6vvbh86868nw" path="res://sounds/demonSounds.wav" id="3_h3ukl"]
[ext_resource type="PackedScene" uid="uid://cv5yh37vpvyt4" path="res://scenes/enemy_health_bar.tscn" id="4_fha66"]
[ext_resource type="AudioStream" uid="uid://dluhp23fpkxov" path="res://sounds/demonDeath.wav" id="4_xt8pp"]
[ext_resource type="PackedScene" uid="uid://c8y1u7h25cpww" path="res://scenes/demonDeath.tscn" id="5_ewpy5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ulfji"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qg1h1"]

[sub_resource type="ViewportTexture" id="ViewportTexture_o3w66"]
viewport_path = NodePath("SubViewport")

[node name="enemy" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.440707, 0)
script = ExtResource("1_8rxgg")

[node name="hurtbox" type="Area3D" parent="." groups=["enemies", "enemy1"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="hurtbox"]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 1.36586, 0)
shape = SubResource("CapsuleShape3D_ulfji")

[node name="hitbox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="hitbox"]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 1.36586, 0)
shape = SubResource("CapsuleShape3D_ulfji")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-2.62268e-08, 0, 0.9, 0, 0.72, 0, -0.6, 0, -3.93403e-08, 0, 0.75, 0)
mesh = ExtResource("2_3ylb2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 1.37522, 0)
shape = SubResource("CapsuleShape3D_qg1h1")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = 0.5

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7532, 0)
stream = ExtResource("3_h3ukl")
volume_db = -5.0
unit_size = 1.0
max_db = 0.0
pitch_scale = 0.9
autoplay = true

[node name="demonHit" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7532, 0)
stream = ExtResource("4_xt8pp")
volume_db = -5.0
unit_size = 1.0
max_db = -5.0
pitch_scale = 1.2

[node name="deathSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7532, 0)
stream = ExtResource("4_xt8pp")
volume_db = -5.0
unit_size = 1.0
max_db = -5.0
pitch_scale = 0.7

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.36382, 0)

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true

[node name="enemyHealthBar" parent="SubViewport" instance=ExtResource("4_fha66")]
max_value = 100.0
value = 100.0

[node name="HealthBar" type="Sprite3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 2.777, 0)
texture = SubResource("ViewportTexture_o3w66")

[node name="stunTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="demonDeath" parent="." instance=ExtResource("5_ewpy5")]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0.558476, 0)
amount = 32
lifetime = 0.4

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="stunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="finished" from="demonDeath" to="." method="_on_demon_death_finished"]
